# used-car-export-ai

./: .env.example  .gitignore  README.md  산학캡스톤디자인 프로젝트 제안서-2026년-LLM wiki 기반 수출특화 AI에이전트 구축_(주)하이쓰리디_이정욱.docx
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: buyers.py  countries.py  dashboard.py  deps.py  health.py  listings.py  mcp_server.py  users.py  vehicles.py
backend/app/core/: compliance.py  hs_classifier.py  rule_engine.py
backend/app/mcp/: __init__.py  dispatcher.py  tools.py
backend/app/models/: __init__.py  buyer.py  country.py  document.py  listing.py  message.py  shipment.py  user.py  vehicle.py
backend/app/seed/: import_rules.py
backend/app/services/: document_writer.py  mail_writer.py  nhtsa.py  ofac_loader.py  pricing.py
backend/app/services/document_templates/: _base.html  _party_blocks.html  _shipping_kv.html  _styles.css  co_application.html  invoice.html  packing_list.html  shipping_instruction.html
backend/app/services/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  stub_provider.py
backend/tests/: conftest.py  test_chat_intent.py  test_mcp_dispatcher.py  test_mcp_tools.py  test_pricing.py
capture/: README.md
configs/: samples_registry.yaml
configs/rules/: algeria.yaml  azerbaijan.yaml  bangladesh.yaml  cambodia.yaml  chile.yaml  costa_rica.yaml  dominican_republic.yaml  egypt.yaml  ghana.yaml  jordan.yaml  kazakhstan.yaml  kenya.yaml  kyrgyzstan.yaml  libya.yaml  malaysia.yaml  mexico.yaml  myanmar.yaml  nigeria.yaml  philippines.yaml  south_africa.yaml  sri_lanka.yaml  sudan.yaml  syria.yaml  tanzania.yaml  thailand.yaml  uae.yaml  vietnam.yaml  zimbabwe.yaml
docs/: DEMO_GUIDE.md  EXECUTIVE_SUMMARY.md  MENTOR_QA.md  PHASE_2_ROADMAP.md  competitor_analysis_and_features.md  used_car_export_research.md  used_car_export_research_v2.md  used_car_export_top20_countries.md  userflow_and_erd.md
docs/samples/: REGISTRY.md
docs/validation/: data_audit.md  document_field_matrix.md  findings.md  shipping_matrix.md  tariff_matrix.md
frontend/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/components/: CountryMatrix.tsx  CountrySelect.tsx  (+6 more)
scripts/: README.md  capture_autobell.py  demo_documents.py  demo_mail_writer.py  demo_pdf_template.html  demo_rule_engine.py  fetch_ofac_sdn.py  fetch_public_samples.py  generate_demo_pdf.py  generate_vehicle_images.py  read_pdf_excerpt.py  seed_demo_data.py  validate_document_fields.py
(+40 files in other folders)
